Formularios de registros

--- a/src/views/adminPages/index.ejs
+++ b/src/views/adminPages/index.ejs
@@ -44,10 +44,8 @@
     <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
     <script src="/vendor/chart.js/Chart.min.js"></script>
     <script src="/js/charts-custom.js"></script>
-    
     <script src="/js/homePages/profesionales.js"></script>
-    <script src="/js/homePages/ver-vacante.js"></script>
-    <script src="/js/homePages/ver-profesionales.js"></script>
+    <script src="/js/homePages/vacantes.js"></script>
 </body>
 
 </html>
