--- a/src/views/empresasPages/index.ejs
+++ b/src/views/empresasPages/index.ejs
@@ -29,7 +29,7 @@
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/js/front.js"></script>
     <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
-    <script src="\js\adminPages\index.js"></script>
+    <script src="\js\empresaPages\index.js"></script>
 </head>
 
 <body>
