--- a/src/views/homePages/registrarProfesional.ejs
+++ b/src/views/homePages/registrarProfesional.ejs
@@ -46,7 +46,7 @@
 
                   <label class="col-md-3 form-control-label">Edad</label>
                   <div class="col-md-9">
-                    <input type="number" class="form-control" step="1" start="1" id="edadP" name="edadpro">
+                    <input type="number" class="form-control" step="1" start="1" id="edadP" name="edadpro" required>
                   </div>
                 </div>
                 <div class="line"></div>
@@ -121,7 +121,7 @@
                   <label class="col-md-3 form-control-label">Nivel Academico</label>
 
                   <div class="col-md-9 ml-auto select">
-                    <select multiple="" class="form-control rounded">
+                    <select class="form-control rounded" name="nivelAcademico">
                       <option value="0" selected>Primaria</option>
                       <option value="1">Secundaria</option>
                       <option value="2">Universitario</option>
