--- a/src/views/homePages/index.ejs
+++ b/src/views/homePages/index.ejs
@@ -41,10 +41,10 @@
   </div>
   <script
     src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
   <script src="/js/homePages/profesionales.js"></script>
+  <script src="/js/homePages/empresa.js"></script>
   <script src="/js/homePages/vacantes.js"></script>
 </body>
-
 </html>
