--- a/src/views/homePages/login.ejs
+++ b/src/views/homePages/login.ejs
@@ -47,14 +47,32 @@
 
               <button id="iniSesion" type="submit" class="btn btn-primary shadow px-5">Iniciar sesión </button>
             </form>
-            <div class="mt-5 text-center align-items-center align-middle">
+           <div class="mt-5 text-center align-items-center align-middle">
            		<p class="text-muted">Aún no tiene cuenta?
-           		<a class="text-primary" href="/registroProfesional">Registrese aquí.</a> </p>
-           	</div>         
+           		<a class="text-primary" href="#"  data-toggle="modal" data-target="#myModal">Registrese aquí.</a> </p>
+             </div>      
           </div>
         </div>
         <p class="mt-5 mb-0 text-gray-400 text-center">Proyecto de Desarrollo de Software IX</p>
         <!-- Please do not remove the backlink to us unless you support further theme's development at https://bootstrapious.com/donate. It is part of the license conditions. Thank you for understanding :)                 -->
+      </div>
+    </div>
+    <!-- MODAL -->
+    <div class="modal" id="myModal" tabindex="-1" role="dialog">
+      <div class="modal-dialog  modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Seleccione el tipo de registro</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <a class="btn btn-primary btn-lg btn-block" href="/#registrar-profesional" role="button">Registrarse como
+              profesional</a>
+            <a class="btn btn-secondary btn-lg btn-block" href="/#registrar-empresa" role="button">Registrarse como empresa</a>
+          </div>
+        </div>
       </div>
     </div>
     <!-- JavaScript files-->
