cambio en el header

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,8 +10,7 @@
                     aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img
                         src="<%= headerMenu.image %>" alt="Foto" style="max-width: 2.5rem;"
                         class="img-fluid rounded-circle shadow"></a>
-                <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong
-                            class="d-block text-uppercase headings-font-family"><%= headerMenu.title %></strong>
+                <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong                         class="d-block text-uppercase headings-font-family"><%= headerMenu.title %></strong>
                             <small><%= headerMenu.subTitle %></small></a>
                     <%
                         headerMenu.list.forEach((item)=>{
