Correccion registro y dashboard

--- a/src/views/adminPages/dashboard.ejs
+++ b/src/views/adminPages/dashboard.ejs
@@ -5,12 +5,12 @@
         <div class="col-lg-8 mb-4 mb-lg-0">
           <div class="card">
             <div class="card-header">
-              <h2 class="h6 text-uppercase mb-0">Cantidad de inicios de sesión por mes</h2>
+              <h2 class="h6 text-uppercase mb-0">Cantidad de empresas registradas por mes</h2>
             </div>
             <div class="card-body">
-              <p class="mb-5 text-gray">Cantidad de ususarios que han iniciado sesión cada mes.</p>
+              <p class="mb-5 text-gray">Cantidad de empresas que se registraron cada mes</p>
               <div class="chart-holder mt-5 mb-5">
-                <canvas id="lineChartExample">
+                <canvas id="CantEmpMes">
                 </canvas>
               </div>
             </div>
@@ -19,21 +19,21 @@
         <div class="col-lg-4">
           <div class="card mb-4">
             <div class="card-header">
-              <h2 class="h6 text-uppercase mb-0">Porcentaje de hombres y mujeres</h2>
+              <h2 class="h6 text-uppercase mb-0">Cantidad de hombres y mujeres</h2>
             </div>
             <div class="card-body">
               <div class="chart-holder">
-                <canvas id="pieChartExample"></canvas>
+                <canvas id="cantMF"></canvas>
               </div>
             </div>
           </div>
           <div class="card mb-3">
             <div class="card-header">
-              <h2 class="h6 text-uppercase mb-0">Porcentaje de empresas y profesionales</h2>
+              <h2 class="h6 text-uppercase mb-0">Cantidad de empresas y profesionales</h2>
             </div>
             <div class="card-body">
               <div class="chart-holder">
-                <canvas id="doughnutChartExample"></canvas>
+                <canvas id="cantEmpProf"></canvas>
               </div>
             </div>
           </div>
@@ -47,17 +47,17 @@
             </div>
             <div class="card-body">
               <div class="chart-holder">
-                <canvas id="barChartExample2"></canvas>
+                <canvas id="cantVacantesMes"></canvas>
               </div>
             </div>
           </div>
           <div class="card mb-4">
             <div class="card-header">
-              <h2 class="h6 text-uppercase mb-0">Cantidad de profesionales registrados</h2>
+              <h2 class="h6 text-uppercase mb-0">Cantidad Vacantes por tipo de horario</h2>
             </div>
             <div class="card-body">
               <div class="chart-holder">
-                <canvas id="barChartExample3"></canvas>
+                <canvas id="cantVacantesTipoHorario"></canvas>
               </div>
             </div>
           </div>
@@ -65,12 +65,12 @@
         <div class="col-lg-8">
           <div class="card">
             <div class="card-header">
-              <h2 class="h6 mb-0 text-uppercase">Cantidad de visitas por mes</h2>
+              <h2 class="h6 mb-0 text-uppercase">Cantidad de profesionales registrados</h2>
             </div>
             <div class="card-body">
-              <p class="mb-5 text-gray">Número de visitas por mes.</p>
+              <p class="mb-5 text-gray">Número de profesionales registrados por mes.</p>
               <div class="chart-holder mt-5 mb-5">
-                <canvas id="barChartExample1"></canvas>
+                <canvas id="cantProfesionalesMes"></canvas>
               </div>
             </div>
           </div>
