--- a/src/views/adminPages/index.ejs
+++ b/src/views/adminPages/index.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/css/orionicons.css">
     <!-- theme stylesheet-->
     <link rel="stylesheet" href="/css/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="/css/custom.css">
     <!-- Favicon-->
@@ -50,6 +51,8 @@
     <script src="/js/homePages/profesionales.js"></script>
     <script src="/js/homePages/ver-vacante.js"></script>
     <script src="/js/homePages/ver-profesionales.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"> </script>
 </body>
 
 </html>
