--- a/src/views/empresasPages/registrarVacante.ejs
+++ b/src/views/empresasPages/registrarVacante.ejs
@@ -59,12 +59,7 @@
                 <div class="form-group row">
                   <label class="col-md-3 form-control-label">Tipo de horario</label>
                   <div class="col-md-9">
-                    <select name="tipoHorario"  id="tipoHorario" class="form-control">
-                      <option>Full time</option>
-                      <option>Part time</option>
-                      <option>Por horas</option>
-                      <option>Fines de semana</option>
-                    </select>
+                    <select name="tipoHorario"  id="tipoHorario" class="form-control"></select>
                     <small class="form-text text-muted ml-3">Seleccione el tipo de horario de su vacante.</small>
                   </div>
                 </div>
