--- a/src/views/profesionalesPages/index.ejs
+++ b/src/views/profesionalesPages/index.ejs
@@ -46,7 +46,7 @@
     <%- include('../partials/header') %>
     <div class="d-flex align-items-stretch">
         <%- include('../partials/sideMenu') %>
-        <div id="container"></div>
+        <div id="container" class="container-fluid"></div>
     </div>
     <script src="/js/homePages/profesionales.js"></script>
     <script src="/js/homePages/vacantes.js"></script>
