--- a/src/views/profesionalesPages/index.ejs
+++ b/src/views/profesionalesPages/index.ejs
@@ -56,6 +56,7 @@
     </div>
     <script src="/js/homePages/profesionales.js"></script>
     <script src="/js/homePages/vacantes.js"></script>
+    <script src="/js/services.js"></script>
 </body>
 
 </html>
