--- a/src/views/profesionalesPages/perfil.ejs
+++ b/src/views/profesionalesPages/perfil.ejs
@@ -137,7 +137,24 @@
                                     </div>
                                 </div>
                                 <div class="line"></div>
-
+                                
+                                <!--Campo Sexo-->
+                                <div class="form-group row">
+                                    <label class="col-md-3 form-control-label">Foto de Perfil</label>
+                                    <div class="col-md-9">
+                                        <div class="avatar-upload">
+                                            <div class="avatar-edit">
+                                                <input type='file' id="imageUpload" name="avatar" accept=".png, .jpg, .jpeg" />
+                                                <label for="imageUpload"></label>
+                                            </div>
+                                            <div class="avatar-preview">
+                                                <div id="imagePreview" style="background-image: url(img/defaultAvatar.png);">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="line"></div>
                                 <!---->
                                 <div class="form-group row">
                                     <div class="col-md-9 ml-auto">
