ver vacantes publicadas

--- a/src/views/empresasPages/index.ejs
+++ b/src/views/empresasPages/index.ejs
@@ -45,7 +45,7 @@
     <%- include('../partials/header') %>
     <div class="d-flex align-items-stretch">
         <%- include('../partials/sideMenu') %>
-        <div id="container"></div>
+        <div id="container" class="container-fluid"></div>
     </div>
     <script
         src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"></script>
@@ -57,6 +57,7 @@
     <script src="/js/front.js"></script>
     <script src="/js/RegistrarVacante.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"> </script>
+    <script src="/js/empresaPages/mis-vacantes.js"></script>
 </body>
 
 </html>
