--- a/src/views/empresasPages/empresaVacante.ejs
+++ b/src/views/empresasPages/empresaVacante.ejs
@@ -6,90 +6,11 @@
                 <li class="breadcrumb-item active" aria-current="page">Vacante</li>
             </ol>
         </nav>
-        <section class="py-3">
+        <div class="container py-3">
             <div class="row">
-                <div class="col-lg-12"><a href="#" data-toggle="modal" data-target="#exampleModal"
-                        class="message card px-5 py-3 mb-4 bg-hover-gradient-primary no-anchor-style">
-                        <div class="row">
-                            <div
-                                class="col-lg-3 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
-                                <strong class="h5 mb-0">24<sup
-                                        class="smaller text-gray font-weight-normal">Apr</sup></strong><img
-                                    src="/img/avatar-1.jpg" alt="..." style="max-width: 3rem"
-                                    class="rounded-circle mx-3 my-2 my-lg-0">
-                                <h6 class="mb-0">Nombre Vacante</h6>
-                            </div>
-                            <div
-                                class="col-lg-9 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
-                                <div class="bg-gray-100 roundy px-4 py-1 mr-0 mr-lg-3 mt-2 mt-lg-0 text-dark exclode">
-                                    Estado</div>
-                                <p class="mb-0 mt-3 mt-lg-0">Lorem ipsum dolor sit amet, consectetur adipisicing
-                                    elit, sed do eiusmod tempor.</p>
-                            </div>
-                        </div>
-                    </a></div>
-                <div class="col-lg-12"><a href="#" data-toggle="modal" data-target="#exampleModal"
-                        class="message card px-5 py-3 mb-4 bg-hover-gradient-primary no-anchor-style">
-                        <div class="row">
-                            <div
-                                class="col-lg-3 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
-                                <strong class="h5 mb-0">24<sup
-                                        class="smaller text-gray font-weight-normal">Nov</sup></strong><img
-                                    src="/img/avatar-2.jpg" alt="..." style="max-width: 3rem"
-                                    class="rounded-circle mx-3 my-2 my-lg-0">
-                                <h6 class="mb-0">Nombre Vacante</h6>
-                            </div>
-                            <div
-                                class="col-lg-9 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
-                                <div class="bg-gray-100 roundy px-4 py-1 mr-0 mr-lg-3 mt-2 mt-lg-0 text-dark exclode">
-                                    Estado</div>
-                                <p class="mb-0 mt-3 mt-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit..</p>
-                            </div>
-                        </div>
-                    </a></div>
-                <div class="col-lg-12"><a href="#" data-toggle="modal" data-target="#exampleModal"
-                        class="message card px-5 py-3 mb-4 bg-hover-gradient-primary no-anchor-style">
-                        <div class="row">
-                            <div
-                                class="col-lg-3 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
-                                <strong class="h5 mb-0">17<sup
-                                        class="smaller text-gray font-weight-normal">Aug</sup></strong><img
-                                    src="/img/avatar-3.jpg" alt="..." style="max-width: 3rem"
-                                    class="rounded-circle mx-3 my-2 my-lg-0">
-                                <h6 class="mb-0">Nombre Vacante</h6>
-                            </div>
-                            <div
-                                class="col-lg-9 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
-                                <div class="bg-gray-100 roundy px-4 py-1 mr-0 mr-lg-3 mt-2 mt-lg-0 text-dark exclode">
-                                    Estado</div>
-                                <p class="mb-0 mt-3 mt-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit..</p>
-                            </div>
-                        </div>
-                    </a></div>
-                <div class="col-lg-12"><a href="#" data-toggle="modal" data-target="#exampleModal"
-                        class="message card px-5 py-3 mb-4 bg-hover-gradient-primary no-anchor-style">
-                        <div class="row">
-                            <div
-                                class="col-lg-3 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
-                                <strong class="h5 mb-0">15<sup
-                                        class="smaller text-gray font-weight-normal">Sep</sup></strong><img
-                                    src="/img/avatar-4.jpg" alt="..." style="max-width: 3rem"
-                                    class="rounded-circle mx-3 my-2 my-lg-0">
-                                <h6 class="mb-0">Nombre Vacante</h6>
-                            </div>
-                            <div
-                                class="col-lg-9 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
-                                <div class="bg-gray-100 roundy px-4 py-1 mr-0 mr-lg-3 mt-2 mt-lg-0 text-dark exclode">
-                                    Estado</div>
-                                <p class="mb-0 mt-3 mt-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing
-                                    elit..</p>
-                            </div>
-                        </div>
-                    </a></div>
+                <plugdo-card name="card-vacante" src="/templates/card-vacante.html"></plugdo-card>
             </div>
-        </section>
+        </div>
     </div>
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
