Push al Branch por Chan

--- a/src/views/profesionalesPages/index.ejs
+++ b/src/views/profesionalesPages/index.ejs
@@ -54,6 +54,8 @@
         <%- include('../partials/sideMenu') %>
         <div id="container" class="container-fluid"></div>
     </div>
+    <script src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="/js/homePages/profesionales.js"></script>
     <script src="/js/homePages/vacantes.js"></script>
     <script src="/js/services.js"></script>
