--- a/src/views/homePages/home.ejs
+++ b/src/views/homePages/home.ejs
@@ -3,6 +3,11 @@
     .sidebar {
         display: none;
     }
+    #container {
+       padding-right: 0px !important;
+        padding-left: 0px !important; 
+    }
+    
 </style>
 <div class="hero-awesomex" style="background-image: url(https://ununsplash.imgix.net/photo-1416339134316-0e91dc9ded92?q=75&fm=jpg&s=883a422e10fc4149893984019f63c818)">
     <div class="hero__content-awesomex">
