--- a/src/views/profesionalesPages/perfil.ejs
+++ b/src/views/profesionalesPages/perfil.ejs
@@ -98,7 +98,7 @@
                                     <label class="col-md-3 form-control-label">Password</label>
                                     <div class="col-md-9">
                                         <input type="password" name="password" class="form-control" id="passP"
-                                            name="Passpro" required>
+                                            name="Passpro">
                                     </div>
                                 </div>
                                 <div class="line"></div>
@@ -138,7 +138,7 @@
                                 </div>
                                 <div class="line"></div>
                                 
-                                <!--Campo Sexo-->
+                                <!--Campo Perfil-->
                                 <div class="form-group row">
                                     <label class="col-md-3 form-control-label">Foto de Perfil</label>
                                     <div class="col-md-9">
