carga de la pantalla Mis vacantes

--- a/src/views/empresasPages/empresaVacante.ejs
+++ b/src/views/empresasPages/empresaVacante.ejs
@@ -6,9 +6,8 @@
                 <li class="breadcrumb-item active" aria-current="page">Vacante</li>
             </ol>
         </nav>
-        <div class="container py-3">
-            <div class="row">
-                <plugdo-card name="card-vacante" src="/templates/card-vacante.html"></plugdo-card>
+        <div class="container">
+            <div class="row" id='content-card'>
             </div>
         </div>
     </div>
