--- a/src/views/profesionalesPages/index.ejs
+++ b/src/views/profesionalesPages/index.ejs
@@ -30,18 +30,14 @@
     <link rel="stylesheet" href="/css/home/card-empresa.css">
     <link rel="stylesheet" href="/css/home/divider.css">
     <!-- Tweaks for older IEs-->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-    <!-- JavaScript files-->
+
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/popper.js/umd/popper.min.js"> </script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/vendor/jquery.cookie/jquery.cookie.js"> </script>
     <script src="/vendor/chart.js/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    <!-- <script src="/js/charts-home.js"></script> -->
-    <!-- <script src="/js/front.js"></script> -->
+    <script src="/js/front.js"></script>
     <script src="//cdn.plugdo.com/js/plugdo-dependency.min.js"></script>
     <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
     <script src="\js\profesionalPages\index.js"></script>
