Push al Branch por Chan

--- a/src/views/homePages/registrarProfesional.ejs
+++ b/src/views/homePages/registrarProfesional.ejs
@@ -98,28 +98,40 @@
                 <div class="line"></div>
                 <!--Campo Descripcion-->
                 <div class="form-group row">
-
                   <label class="col-md-3 form-control-label">Descripcion Profesional</label>
                   <div class="col-md-9">
                     <textarea class="form-control scroll" id="DescP" rows="3" name="descppro"></textarea>
                   </div>
                 </div>
                 <div class="line"></div>
-
+                <!--Campo Servicio-->
+                <div class="form-group row">
+                  <label class="col-md-3 form-control-label">Servicio que Ofrece</label>
+                  <div class="col-md-9">
+                    <input type="text" class="form-control" id="servicioOfrecido" name="servicioOfrecido">
+                  </div>
+                </div>
+                <div class="line"></div>
+                <!--Campo Nivel Academico -->
+                <div class="form-group row">
+                  <label class="col-md-3 form-control-label">Áreas</label>
+                  <div class="col-md-9 ml-auto select">
+                    <select class="form-control rounded" id="areas" name="areas">
+                    </select>
+                  </div>
+                </div>
+                <div class="line"></div>
                 <!--Campo Experiencia-->
                 <div class="form-group row">
-
                   <label class="col-md-3 form-control-label">Experiencia</label>
                   <div class="col-md-9">
                     <input type="text" class="form-control" id="expP" name="experienciapro">
                   </div>
                 </div>
                 <div class="line"></div>
-
                 <!--Campo Nivel Academico -->
                 <div class="form-group row">
                   <label class="col-md-3 form-control-label">Nivel Academico</label>
-
                   <div class="col-md-9 ml-auto select">
                     <select class="form-control rounded" name="nivelAcademico">
                       <option value="0" selected>Primaria</option>
