--- a/src/views/homePages/home.ejs
+++ b/src/views/homePages/home.ejs
@@ -11,7 +11,7 @@
 </style>
 <div class="hero-awesomex" style="background-image: url(https://ununsplash.imgix.net/photo-1416339134316-0e91dc9ded92?q=75&fm=jpg&s=883a422e10fc4149893984019f63c818)">
     <div class="hero__content-awesomex">
-      <h1>TAPP, Del app a tú casa.</h1>
+      <h1>TAPP, del APP al TRABAJO.</h1>
       <!-- <a class="btn btn-hero-awesomex" href="#">Iniciar sesion</a> -->
     </div>
   </div>
