--- a/src/views/homePages/verProfesionales.ejs
+++ b/src/views/homePages/verProfesionales.ejs
@@ -114,7 +114,7 @@
           data-toggle="modal" data-id="<%= data.id_profesional %>" data-target="#modal">
           <div class="row">
             <div class="col-lg-3 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
-              <img src="/img/avatar-4.jpg" alt="..." style="max-width: 3rem" class="rounded-circle mx-3 my-2 my-lg-0">
+              <img src="/img/<%= data.foto%>" alt="..." style="max-width: 3rem" class="rounded-circle mx-3 my-2 my-lg-0">
               <h6 class="mb-0"><%- data.nombre_profesional + " " + data.apellido_profesional  %></h6>
             </div>
             <div class="col-lg-4 d-flex align-items-center flex-column flex-lg-row text-center text-md-left">
