Push al Branch por Chan

--- a/src/views/profesionalesPages/index.ejs
+++ b/src/views/profesionalesPages/index.ejs
@@ -41,6 +41,9 @@
     <script src="//cdn.plugdo.com/js/plugdo-dependency.min.js"></script>
     <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
     <script src="\js\profesionalPages\index.js"></script>
+    <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
+    <script src="https://js.braintreegateway.com/web/3.39.0/js/client.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.39.0/js/paypal-checkout.min.js"></script>
 </head>
 
 <body>
