--- a/src/views/profesionalesPages/perfil.ejs
+++ b/src/views/profesionalesPages/perfil.ejs
@@ -160,6 +160,7 @@
                                     <div class="col-md-9 ml-auto">
                                         <button type="reset" class="btn btn-secondary">Limpiar</button>
                                         <button type="submit" class="btn btn-primary">Enviar Datos</button>
+                                        <button id="paypal-button"></button>
                                     </div>
                                 </div>
                             </form>
