--- a/src/views/adminPages/index.ejs
+++ b/src/views/adminPages/index.ejs
@@ -52,6 +52,7 @@
     <script src="/vendor/chart.js/Chart.min.js"></script>
     <script src="/js/charts-custom.js"></script>
     <script src="/js/homePages/profesionales.js"></script>
+    <script src="/js/homePages/home.js"></script>
     <script src="/js/homePages/ver-vacante.js"></script>
     <script src="/js/homePages/ver-profesionales.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/NetoCh/libraries@v1.1.3/SelectService-Example/select-services.min.js"> </script>
