--- a/src/views/homePages/index.ejs
+++ b/src/views/homePages/index.ejs
@@ -52,5 +52,6 @@
   <script src="/js/homePages/profesionales.js"></script>
   <script src="/js/homePages/empresa.js"></script>
   <script src="/js/homePages/vacantes.js"></script>
+  <script src="/js/homePages/home.js"></script>
 </body>
 </html>
