cambios en vacantes

--- a/src/views/homePages/verVacantes.ejs
+++ b/src/views/homePages/verVacantes.ejs
@@ -98,8 +98,8 @@
           <div class="col-lg-6 col-md-6 col-sm-12 mt-4" id="<%= data.id_vacante %>">
               <div class="blog-card-entrepressx">
                   <div class="meta-entrepressx"><a  class="messageVacante  no-anchor-style" data-toggle="modal" data-target="#modal" data-id=<%= data.id_vacante %>>
-                      <div class="photo-entrepressx"
-                          style="background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-2.jpg)">
+                      <div class="photo-entrepressx">
+                        <img src="img/<%= data.foto%>">
                       </div>
                       <ul class="details-entrepressx">
                           <li class="date-entrepressx"><%=data.fecha%></li>
