--- a/src/views/homePages/verVacantes.ejs
+++ b/src/views/homePages/verVacantes.ejs
@@ -88,7 +88,7 @@
     </section>
     <!--Vacantes-->
     <section>
-      <div class="row text-dark px-5">
+      <div class="row text-dark px-xl-5">
         <% if (page.vacantes.length == 0){ %>
             <div class="p-3 col-12">
               <h2 class="text-center"><small>No hay resultados con esos requerimientos. Inténtelo con otros.</small></h2>
@@ -266,18 +266,3 @@
     </div>
   </footer>
 </div>
-
-<!-- <div class="col-lg-4 mb-4"><a href="#" class="bg-hover-gradient-primary no-anchor-style" data-toggle="modal"
-            data-target="#myModal2">
-            <div class="card rounded bg-hover-gradient-violet">
-              <div class="content p-4">
-                <h2 class="mb-5"><i class="fas fa-bullhorn"></i><small class="ml-3">iThink</small></h2>
-                <small class="text-gray">iThink@yahoo.com</small>
-                <div class="text-uppercase">
-                  <div class="font-weight-bold d-block">Diseñador grafico</div>
-                  <h4 class="mb-0">$780.00</h4>
-                </div>
-              </div>
-            </div>
-          </a>
-      </div> -->
