--- a/src/views/empresasPages/empresaVacante.ejs
+++ b/src/views/empresasPages/empresaVacante.ejs
@@ -81,6 +81,13 @@
                       </div>
                     </div>
                   </form>
+                  <hr>
+                  <div class="form-group row text-center" id='pay'>
+                    <label class="col-md-12 form-control-label">Destacar Vacante</label>
+                    <div class="col-md-12">
+                      <div id="#paypal-button"></div>
+                    </div>
+                  </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
