--- a/src/views/empresasPages/index.ejs
+++ b/src/views/empresasPages/index.ejs
@@ -38,8 +38,9 @@
     <script src="/js/front.js"></script>
     <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
     <script src="\js\empresaPages\index.js"></script>
-
-    
+    <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
+    <script src="https://js.braintreegateway.com/web/3.39.0/js/client.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/3.39.0/js/paypal-checkout.min.js"></script>
 </head>
 
 <body>
