cambio de textos

--- a/src/views/homePages/home.ejs
+++ b/src/views/homePages/home.ejs
@@ -19,9 +19,7 @@
     <section class="section-dividerx col-2-dividerx color-dividerx ss-style-curvedown">
         <div class="column-dividerx text-dividerx">
             <h2 class="font-weight-bold">Profesionales Destacados</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus iusto explicabo odio magnam natus in
-                facere officia quam quos modi voluptatum architecto consequuntur blanditiis dignissimos vero sed libero,
-                error unde!</p>
+            <p>Profesionales de diversas áreas todos en un soló sitio. Enuentra al que necesitas ¡Ya!</p>
         </div>
     </section>
 </div>
@@ -51,9 +49,7 @@
 <section class="section-dividerx col-2-dividerx color-dividerx ss-style-curvedown">
     <div class="column-dividerx text-dividerx text-left">
         <h2 class="font-weight-bold">Vacantes Destacadas</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus iusto explicabo odio magnam natus in
-            facere officia quam quos modi voluptatum architecto consequuntur blanditiis dignissimos vero sed libero,
-            error unde!</p>
+        <p>Ofertas de trabajo de diversas empresas en Panamá ¡todas en un solo lugar! Encuentra la adecuada para ti y preparate para aplicar.</p>
     </div>
 </section>
 <svg id="curveDownColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100"
