--- a/src/views/empresasPages/registrarVacante.ejs
+++ b/src/views/empresasPages/registrarVacante.ejs
@@ -39,7 +39,7 @@
 
                 <div class="line"></div>
                 <div class="form-group row">
-                  <label class="col-md-3 form-control-label">Trabajos a dessempeñar</label>
+                  <label class="col-md-3 form-control-label">Trabajos a desempeñar</label>
                   <div class="col-md-9">
                     <textarea id="trabajosDes" name="trabajosDes" rows="8" cols="50" class="form-control scroll"></textarea>
                     <small class="form-text text-muted ml-3">Detalle los trabajos que desempeñará el trabajador. Ejemplo “Configurar redes, monitorear puertos, etc”.</small>
