--- a/src/views/adminPages/index.ejs
+++ b/src/views/adminPages/index.ejs
@@ -35,7 +35,7 @@
     <script src="/vendor/popper.js/umd/popper.min.js"> </script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/js/front.js"></script>
-    <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
+    <script src="/js/plugdoeui.js"></script>
     <script src="\js\adminPages\index.js"></script>
 </head>
 
