--- a/src/views/empresasPages/index.ejs
+++ b/src/views/empresasPages/index.ejs
@@ -36,7 +36,7 @@
     <script src="/vendor/popper.js/umd/popper.min.js"> </script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/js/front.js"></script>
-    <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
+    <script src="/js/plugdoeui.js"></script>
     <script src="\js\empresaPages\index.js"></script>
     <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
     <script src="https://js.braintreegateway.com/web/3.39.0/js/client.min.js"></script>
