--- a/src/views/profesionalesPages/index.ejs
+++ b/src/views/profesionalesPages/index.ejs
@@ -38,8 +38,7 @@
     <script src="/vendor/chart.js/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="/js/front.js"></script>
-    <script src="//cdn.plugdo.com/js/plugdo-dependency.min.js"></script>
-    <script src="//cdn.plugdo.com/release/2.7/plugdoeui.min.js"></script>
+    <script src="/js/plugdoeui.js"></script>
     <script src="\js\profesionalPages\index.js"></script>
     <script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
     <script src="https://js.braintreegateway.com/web/3.39.0/js/client.min.js"></script>
